<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoajedres"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edittextlogin2"
        android:layout_width="237dp"
        android:layout_height="51dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="220dp"
        android:ems="10"
        android:hint="@string/edittextloguin2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#E91E63"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewlogin2"
        app:layout_constraintVertical_bias="0.588" />

    <TextView
        android:id="@+id/textviewlogin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="157dp"
        android:text="@string/textviewloguin3"
        android:textColor="#F3EFEF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewlogin1" />

    <TextView
        android:id="@+id/textviewlogin1"
        android:layout_width="265dp"
        android:layout_height="107dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="88dp"
        android:text="@string/textviewloguin1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textviewlogin2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textviewlogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="157dp"
        android:text="@string/textviewloguin2"
        android:textColor="#F3EFEF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewlogin1" />

    <EditText
        android:id="@+id/edittextlogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/edittextloguin1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textviewlogin3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textviewlogin2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonloguin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="103dp"
        android:backgroundTint="#000000"
        android:onClick="Entrar"
        android:text="@string/buttonloguin1"
        android:textColor="#F3EFEF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextlogin2" />
</androidx.constraintlayout.widget.ConstraintLayout>